W6 Personal Assignment almost completed
