# swagger.json
@@ -6,12 +6,6 @@
     "version": "1.0.0"
   },
   "host": "cse341-05-project.onrender.com",
-  "servers": [
-    {
-      "url": "http://localhost:3000",
-      "description": "Local server"
-    }
-  ],
   "basePath": "/",
   "schemes": [
     "https"
@@ -20,6 +14,9 @@
     "/islands": {
       "get": {
         "description": "Read all islands",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "apiKey",
@@ -30,6 +27,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -44,27 +44,43 @@
             "in": "body",
             "schema": {
               "type": "object",
-              "required": [
-                "name",
-                "country",
-                "population",
-                "language",
-                "capital",
-                "subRegion",
-                "climate",
-                "mainIndustries",
-                "elevation"
-              ],
               "properties": {
-                "name": { "type": "string", "example": "Fiji" },
-                "country": { "type": "string", "example": "Fiji" },
-                "population": { "type": "number", "example": 900000 },
-                "language": { "type": "string", "example": "Fijian" },
-                "capital": { "type": "string", "example": "Suva" },
-                "subRegion": { "type": "string", "example": "Melanesia" },
-                "climate": { "type": "string", "example": "Tropical" },
-                "mainIndustries": { "type": "string", "example": "Tourism, Fishing" },
-                "elevation": { "type": "number", "example": 1324 }
+                "name": {
+                  "type": "string",
+                  "example": "Fiji"
+                },
+                "country": {
+                  "type": "string",
+                  "example": "Fiji"
+                },
+                "population": {
+                  "type": "number",
+                  "example": 900000
+                },
+                "language": {
+                  "type": "string",
+                  "example": "Fijian"
+                },
+                "capital": {
+                  "type": "string",
+                  "example": "Suva"
+                },
+                "subRegion": {
+                  "type": "string",
+                  "example": "Melanesian"
+                },
+                "climate": {
+                  "type": "string",
+                  "example": "Tropical"
+                },
+                "mainIndustries": {
+                  "type": "array",
+                  "example": "Tourism, Fishing"
+                },
+                "elevation": {
+                  "type": "number",
+                  "example": 1324
+                }
               }
             }
           }
@@ -75,6 +91,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -93,9 +112,130 @@
         }
       }
     },
+    "/islands/{island_id}": {
+      "get": {
+        "description": "Read a specific island",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }, 
+          {
+            "name": "apiKey",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "Update a specific island",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "country": {
+                  "example": "any"
+                },
+                "population": {
+                  "example": "any"
+                },
+                "language": {
+                  "example": "any"
+                },
+                "capital": {
+                  "example": "any"
+                },
+                "subRegion": {
+                  "example": "any"
+                },
+                "climate": {
+                  "example": "any"
+                },
+                "mainIndustries": {
+                  "example": "any"
+                },
+                "elevation": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "Delete a specific island",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/traditions": {
       "get": {
         "description": "Read all traditions",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "apiKey",
@@ -107,11 +247,14 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      },
+      },  
       "post": {
         "description": "Create a new tradition",
         "parameters": [
@@ -120,19 +263,27 @@
             "in": "body",
             "schema": {
               "type": "object",
-              "required": [
-                "name",
-                "traditionId",
-                "description",
-                "category",
-                "significance"
-              ],
               "properties": {
-                "name": { "type": "string", "example": "Hula Dance" },
-                "islandId": { "type": "string", "example": "ISL001" },
-                "description": { "type": "string", "example": "Traditional cultural dance." },
-                "category": { "type": "string", "example": "Cultural" },
-                "significance": { "type": "string", "example": "Represents island identity." }
+                "name": {
+                  "type": "string",
+                  "example": "Hula"
+                },
+                "islandId": {
+                  "type": "number",
+                  "example": 1
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Traditional cultural dance"
+                },
+                "category": {
+                  "type": "string",
+                  "example": "Cultural"
+                },
+                "significance": {
+                  "type": "string",
+                  "example": "Represents island identity"
+                }
               }
             }
           }
@@ -143,6 +294,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -161,92 +315,19 @@
         }
       }
     },
-    "/islands/{island_id}": {
-      "get": {
-        "description": "Read a specific island",
-        "parameters": [
-          {
-            "name": "island_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "apiKey",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "description": "Update a specific island",
-        "parameters": [
-          {
-            "name": "island_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Updated"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "Delete a specific island",
-        "parameters": [
-          {
-            "name": "island_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/traditions/{tradition_id}": {
       "get": {
         "description": "Read a specific tradition",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
-            "name": "tradition_id",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
-          },
+          }, 
           {
             "name": "apiKey",
             "in": "header",
@@ -256,6 +337,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -269,21 +353,46 @@
         "description": "Update a specific tradition",
         "parameters": [
           {
-            "name": "tradition_id",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "islandId": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "significance": {
+                  "type": "string",
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "201": {
-            "description": "Updated"
+          "202": {
+            "description": "Accepted"
           },
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -294,7 +403,7 @@
         "description": "Delete a specific tradition",
         "parameters": [
           {
-            "name": "tradition_id",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -303,6 +412,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
